tests/fixtures/invalid/none_bitxor_none.py
# Cannot bitwise XOR None and None
x: None = None ^ None
